<resources>
    <string name="app_name">SoccerBattle</string>

    <!-- In-Game templates -->
    <string name="attack_1">attack_1</string>
    <string name="attack_2">attack_2</string>
    <string name="attack_3">attack_3</string>

    <string name="player_1">player_1</string>
    <string name="player_2">player_2</string>

    <string name="attack_message">%1$s %2$s! (+%3$d points)</string>


    <!-- Menu Buttons -->
    <string name="start_game">Start Game</string>
    <string name="top_ten_table">Top 10 Table</string>
    <string name="restart_game">Restart Game</string>
    <string name="back_to_home">Back to Home</string>

    <string name="background">background</string>

    <!-- Dice -->
    <string name="dice">Dice</string>
    <string name="roll_dice">Roll Dice</string>

    <!-- Results -->
    <string name="player_win">%1$s Win!</string>
    <string name="win_result_message">Won the game in %1$d turns</string>

    <!-- Table -->
    <string name="name">Name</string>
    <string name="turns_played">Turns</string>
    <string name="data">Date</string>
    <string name="Location">Location</string>
    <string name="not_applicable">N/A</string>

    <string name="hashtag">#</string>
    <string name="vs">VS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>