<TableRow android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/table_row"
    android:background="@drawable/row_background"
    android:backgroundTint="@android:color/darker_gray"
    android:clickable="true"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:text="@string/not_applicable"
        android:layout_weight="0.3"
        style="@style/Base.Widget.AppCompat.TextView.TableRowText"
        android:id="@+id/table_row_LBL_rank"
        />

    <TextView
        android:text="@string/name"
        android:layout_weight="1"
        style="@style/Base.Widget.AppCompat.TextView.TableRowText"
        android:id="@+id/table_row_LBL_name"
        />

    <TextView
        android:text="@string/turns_played"
        android:layout_weight="1"
        style="@style/Base.Widget.AppCompat.TextView.TableRowText"
        android:id="@+id/table_row_LBL_turns"
        />

    <TextView
        android:text="@string/Location"
        android:textSize="14sp"
        android:layout_weight="1"
        style="@style/Base.Widget.AppCompat.TextView.TableRowText"
        android:id="@+id/table_row_LBL_location"
        />

</TableRow>
