<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".top_ten.TopTenTable">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/top_ten_table"
        android:showDividers="middle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/background_first_row"
            >

            <TextView
                android:text="@string/hashtag"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_weight="0.3"
                android:padding="5dp"
                android:gravity="center_horizontal"
                />

            <TextView
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="center_horizontal"
                />

            <TextView
                android:text="@string/turns_played"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="center_horizontal"
                />

            <TextView
                android:text="@string/Location"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="center_horizontal"
                />

        </TableRow>



    </TableLayout>


</FrameLayout>