<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="-1dp"
        android:contentDescription="@string/background"
        android:id="@+id/common_IMG_background"
        android:scaleType="centerCrop"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/home_LBL_title"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:autoSizeTextType="uniform"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
    />




    <Button
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/menu_button_background"
        android:id="@+id/home_BTN_start"
        android:text="@string/start_game"
        android:autoSizeTextType="uniform"
        android:padding="22dp"
        app:layout_constraintTop_toBottomOf="@id/home_LBL_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/menu_button_background"
        android:id="@+id/home_BTN_top_ten"
        android:text="@string/top_ten_table"
        android:autoSizeTextType="uniform"
        android:padding="22dp"
        app:layout_constraintTop_toBottomOf="@id/home_BTN_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        />







</androidx.constraintlayout.widget.ConstraintLayout>