<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResultActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="-1dp"
        android:contentDescription="@string/background"
        android:id="@+id/common_IMG_background"
        android:scaleType="centerCrop"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:id="@+id/results_LAY_info"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/player_win"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:padding="20dp"
            android:fontFamily="@font/champions"
            android:textAllCaps="true"
            android:id="@+id/results_LBL_title"
            android:textColor="@android:color/white"
            />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/results_IMG_winner"
            android:background="@drawable/result_player_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingTop="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/player_win"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/results_LBL_message"
            android:text="@string/win_result_message"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/champions"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/white"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/results_LAY_info"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/top_ten_BTN_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginStart="30dp"
                android:layout_weight="0.45"
                style="@style/Widget.MaterialComponents.Button.GameButton"
                android:text="@string/restart_game" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/results_BTN_top_ten"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginEnd="30dp"
                android:layout_weight="0.45"
                style="@style/Widget.MaterialComponents.Button.GameButton"
                android:text="@string/top_ten_table" />


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/top_ten_BTN_home"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button.GameButton"
            android:text="@string/back_to_home" />


    </LinearLayout>






</RelativeLayout>