<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:weightSum="0.9"
    android:layout_height="100dp">

    <FrameLayout
        android:layout_width="0dp"
        android:id="@+id/attacks_LAY_1"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="@drawable/attack_button_background"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="15dp"
        >

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:contentDescription="@string/attack_1"
            android:id="@+id/attacks_IMG_1"
            android:scaleType="centerInside"
            android:paddingTop="15dp"
            android:paddingBottom="35dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/attacks_LBL_1"
            android:text="@string/attack_1"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            />

    </FrameLayout>


    <FrameLayout
        android:layout_width="0dp"
        android:id="@+id/attacks_LAY_2"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="@drawable/attack_button_background"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="15dp"
        >

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:contentDescription="@string/attack_2"
            android:id="@+id/attacks_IMG_2"
            android:scaleType="centerInside"
            android:paddingTop="15dp"
            android:paddingBottom="35dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/attacks_LBL_2"
            android:text="@string/attack_2"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:id="@+id/attacks_LAY_3"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="@drawable/attack_button_background"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="15dp"
        >

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/attacks_IMG_3"
            android:contentDescription="@string/attack_3"
            android:scaleType="centerInside"
            android:paddingTop="15dp"
            android:paddingBottom="35dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/attacks_LBL_3"
            android:text="@string/attack_3"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            />

    </FrameLayout>

</LinearLayout>